--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,8 +1,10 @@
+/* Default styling for Body */
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
 }
 
+/* Styling for text area */
 textarea {
   background: transparent;
   border: none;
@@ -16,6 +18,7 @@ textarea {
   white-space: pre-wrap;
 }
 
+/* Styling for each hour displayed */
 .time-block {
   border-radius: 15px;
 }
@@ -30,21 +33,25 @@ textarea {
   border-top: 1px dashed #000000;
 }
 
+/* Past time blocks are greyed out */
 .past {
   background-color: #d3d3d3;
   color: white;
 }
 
+/* Present time blocks are in red */
 .present {
   background-color: #ff6961;
   color: white;
 }
 
+/* Future time blocks are in green */
 .future {
   background-color: #77dd77;
   color: white;
 }
 
+/* Save Button Styling */
 .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
